# drf-project

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  setup.cfg
apps/orders/: filter.py  models.py  serializer.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_ordermodel_day.py  0003_ordermodel_comment.py
apps/pizza_shop/: apps.py  models.py  serializer.py  urls.py  views.py
apps/pizza_shop/migrations/: 0001_initial.py
apps/pizzas/: apps.py  filter.py  models.py  serializer.py  urls.py  views.py
apps/pizzas/migrations/: 0001_initial.py
apps/user/: models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_initial.py
apps/users/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_usermodel_orders.py  0003_alter_usermodel_orders.py  0004_alter_usermodel_age_alter_usermodel_name.py
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  routing.py
backend/apps/pizza_shop/: views.py
backend/apps/pizzas/: consumer.py  filter.py  managers.py  models.py  routing.py  serializer.py  urls.py  views.py
backend/apps/user/: managers.py  models.py  permissions.py  urls.py  (+2 more)
backend/configs/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: apps.py  models.py  pagination.py
backend/templates/: base.html  recover_password.html  register.html  spam.html  test_email.html
configs/: asgi.py  settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: apps.py  models.py  pagination.py
core/enum/: regex_enum.py
frontend/: package.json
frontend/src/: App.js  index.js  router.js
myapp/: views.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
(+28 files in other folders)
