[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = ""
authors = ["Alexandr Semenets <alexandrsemenec01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.6"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^11.0.0"
celery = "^5.4.0"
redis = "^6.0.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"
poetry-core = "^2.1.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
